Fix for 'Follow' button on mobile

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -191,7 +191,9 @@
 .author__urls-wrapper {
   position: relative;
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: top;
+  padding-left: 0px;
+  left: 0px;
   font-family: $sans-serif;
   z-index: 10;
   position: relative;
@@ -218,7 +220,7 @@
 
 .author__urls {
   display: none;
-  position: absolute;
+  position: static;
   right: 0;
   margin-top: 15px;
   padding: 10px;
